<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardElevation="10dp"
    app:cardMaxElevation="10dp"
    android:layout_gravity="center"
    app:cardUseCompatPadding="true"
    android:layout_marginBottom="6dp"
    style="@style/ScreenBackground">

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/CardBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etFirstName"
            style="@style/TextColor"
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/signIn_etFirstName"
            android:inputType="text"
            android:textColorHint="@color/grey" />


        <EditText
            android:id="@+id/etLastName"
            style="@style/TextColor"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/signIn_etLastName"
            android:inputType="text"
            android:textColorHint="@color/grey" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/picture"
                style="@style/TextColor"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/signIn_tvPicture"
                android:textColorHint="@color/light_grey"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnSelectImage"
                android:layout_width="205dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:layout_marginEnd="10dp"
                android:text="@string/signIn_btnSelectImage"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:padding="10dp"
                android:text="@string/update"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>