<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <!-- Top bar -->
    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        style="@style/toolBar"
        android:elevation="4dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/search_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            style="@style/iconsToolBar"
            android:clickable="true"
            android:focusable="true"
            android:padding="12dp"
            android:src="@drawable/ic_search" />


        <ImageView
            android:id="@+id/foobar"
            style="@style/foobar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp"
            android:layout_gravity="end"
            android:padding="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/userBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/toolBar"
        android:elevation="4dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.cardview.widget.CardView
            android:layout_width="65dp"
            android:layout_height="65dp"
            app:cardCornerRadius="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp">

            <ImageButton
                android:id="@+id/profilePic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:padding="12dp"
            android:textSize="22sp" />

        <Button
            android:id="@+id/friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/friends"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:padding="8dp" />

        <Button
            android:id="@+id/addFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/addFriend"
            app:layout_constraintTop_toBottomOf="@+id/profilePic"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>


    <!-- Menu -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lstPosts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/bottomBar"
        app:layout_constraintTop_toBottomOf="@+id/userBar"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:baselineAligned="false">

        <!-- Menu -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            style="@style/CardBackground">

            <ImageButton
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                style="@style/icons"
                android:src="@drawable/ic_menu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu"
                style="@style/TextColor"/>
        </LinearLayout>

        <!-- Notifications -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            style="@style/CardBackground">

            <ImageButton
                android:id="@+id/notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/icons"
                android:src="@drawable/ic_notifications" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notifications"
                android:textSize="12sp"
                style="@style/TextColor"/>
        </LinearLayout>

        <!-- Marketplace -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            style="@style/CardBackground">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/icons"
                android:src="@drawable/ic_marketplace" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marketplace"
                android:textSize="13sp"
                style="@style/TextColor"/>
        </LinearLayout>

        <!-- Reels -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            style="@style/CardBackground">

            <ImageButton
                android:id="@+id/friends2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/icons"
                android:src="@drawable/ic_friends" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/requests"
                android:gravity="center"
                style="@style/TextColor"/>
        </LinearLayout>

        <!-- Feed -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            style="@style/CardBackground">

            <ImageButton
                android:id="@+id/feed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/icons"
                android:src="@drawable/ic_feed" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feed"
                style="@style/TextColor"/>
        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>